trying to fix an issue in the mobile view with a small white line appearing at the bottom of the page on mobile

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
  
 html {
    height: 100%;
+   padding: 0px;
+   margin: 0px;
 }
  
  
@@ -15,6 +17,8 @@ body {
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
+   padding: 0px;
+   margin: 0px;
 }
  
 .header {
